Update contact details

--- a/gezana_app/templates/gezana_app/contact.html
+++ b/gezana_app/templates/gezana_app/contact.html
@@ -29,7 +29,7 @@
   <aside class="page-hero-right">
     <div class="highlight-card">
       <p class="mini">Call us</p>
-      <p class="callout">+353 85 123 4567</p>
+      <p class="callout">+353 85 000000</p>
       <div class="divider"></div>
       <p class="mini">Email</p>
       <p class="callout">gezanabooking@gmail.com</p>
