Update the menu list

--- a/gezana_app/templates/gezana_app/menu_list.html
+++ b/gezana_app/templates/gezana_app/menu_list.html
@@ -64,7 +64,7 @@
 
 
 {% if recommended and not category and not search %}
-<section class="card recommend-wrap">
+<section class="card recommend-wrap recommend-compact">
   <div class="recommend-head">
     <div>
       <p class="eyebrow" style="margin:0;">Top picks</p>
